@startuml

entity user {
  * uid : INT
  --
  name : VARCHAR(20)
  email : VARCHAR(50)
  password : VARCHAR(50)
  user_type : VARCHAR(20)
  last_login : DATETIME
}

entity food {
  * fid : INT
  --
  fname : VARCHAR(50)
  expiration : DATE
  price : DECIMAL(8,0)
  inventory : INT
  discount : DOUBLE
  ftid : INT
  is_donate : INT
  store_id : INT
  is_surplus : TINYINT
}

entity food_type {
  * id : INT
  --
  name : VARCHAR(255)
}

entity orders {
  * oid : INT
  --
  uid : INT
  fid : INT
  money : DECIMAL(8,2)
  num : INT
  purchase_date : TIMESTAMP
}

entity store {
  * store_id : INT
  --
  store_name : VARCHAR(50)
  city : VARCHAR(50)
  uid : INT
}

entity subscribe {
  * sid : INT
  --
  uid : INT
  fid : INT
  create_time : DATE
  alert_type : VARCHAR(255)
  email : VARCHAR(255)
}

entity RatingAndFeedback {
  * RatingID : INT
  --
  UserID : INT
  FoodID : INT
  Rating : INT
  Review : TEXT
  CreatedAt : TIMESTAMP
}

entity claims {
  * claim_id : INT
  --
  food_id : INT
  quantity : INT
  organization_id : INT
  claim_date : TIMESTAMP
}

entity email_notifications {
  * notification_id : INT
  --
  recipient_email : VARCHAR(255)
  subject : VARCHAR(255)
  message : TEXT
  sent_at : TIMESTAMP
}

user ||--o{ orders : "uid"
user ||--o{ subscribe : "uid"
user ||--o{ RatingAndFeedback : "UserID"
user ||--o{ claims : "organization_id"
user ||--o{ store : "uid"
food_type ||--o{ food : "ftid"
food ||--o{ orders : "fid"
food ||--o{ subscribe : "fid"
food ||--o{ RatingAndFeedback : "FoodID"
food ||--o{ claims : "food_id"
store ||--o{ food : "store_id"

@enduml